fixed margins and spacing and made "work" responsive

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,9 +17,42 @@ h6 {
   color: black;
   font-family: var(--heading-font);
 }
-.container {
-  max-width: 100%;
-  margin: 0;
+
+.content-container {
+  margin: 100px auto;
+  padding: 0px 50px;
+}
+.secondary-button {
+  text-decoration: none;
+  font-size: 20px;
+  color: var(--primary-color);
+  background-color: white;
+  font-weight: 500;
+  padding: 10px 30px;
+  border-radius: 4px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.primary-button {
+  text-decoration: none;
+  font-size: 20px;
+  color: white;
+  background-color: var(--primary-color);
+  font-weight: 500;
+  padding: 10px 30px;
+  border-radius: 4px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.content h1 {
+  font-weight: 600;
+  font-size: 70px;
+  line-height: 80px;
+  color: var(--primary-color);
+}
+
+.content h2 {
+  color: var(--primary-color);
+  font-size: 24px;
 }
 .hero {
   background-color: var(--primary-color);
@@ -69,22 +102,6 @@ h6 {
   margin: 10px 10px;
 }
 
-.about-me {
-  margin: 100px 50px 50px 50px;
-}
-
-.about-me h1 {
-  font-weight: 600;
-  font-size: 70px;
-  line-height: 80px;
-  color: var(--primary-color);
-}
-
-.about-me h2 {
-  color: var(--primary-color);
-  font-size: 24px;
-}
-
 .about-me p {
   font-size: 16px;
   line-height: 25px;
@@ -95,30 +112,9 @@ h6 {
   width: 500px;
   border-radius: 4px;
 }
-.secondary-button {
-  text-decoration: none;
-  font-size: 20px;
-  color: var(--primary-color);
-  background-color: white;
-  font-weight: 500;
-  padding: 10px 30px;
-  border-radius: 4px;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-}
-.primary-button {
-  text-decoration: none;
-  font-size: 20px;
-  color: white;
-  background-color: var(--primary-color);
-  font-weight: 500;
-  padding: 10px 30px;
-  border-radius: 4px;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-}
 
 @media (max-width: 900px) {
-  .hero,
-  .about-me {
+  .hero {
     padding-top: 20px;
     padding-bottom: 30px;
     margin-left: 20px;
@@ -141,15 +137,11 @@ h6 {
     font-size: 18px;
   }
 
-  .about-me {
+  .content {
     text-align: center;
   }
-  .about-me h1 {
+  .content h1 {
     font-size: 50px;
     line-height: 60px;
-  }
-
-  .about-me img {
-    margin-top: 30px;
   }
 }
